# autonomous-drone-navigation

./: .gitmodules  README.md  avvia_drone.sh  start_mapping.sh.save
config/: nav2_params.yaml
drone_ws/src/drone_navigation_cpp/: CMakeLists.txt  package.xml
drone_ws/src/drone_navigation_cpp/src/: camera_viewer.cpp  drone_controller.cpp  offboard_path.cpp  offboard_takeoff.cpp  position_listener.cpp
launch/: full_mapping.launch.py  mapping.launch.py  start_nav2.launch.py
